# GraduationProjectQiJiaBao

./: .gitignore  README.md  参考文献列表.xlsx  开题检查记录表.docx  文献综述.docx  毕业设计（论文）开题报告.docx  答辩ppt(齐家宝).pptx  计算机系毕设开题相关文档.docx
PaperAnalysis/: .editorconfig  CMakeLists.txt
PaperAnalysis/data/: LabelDict.json
PaperAnalysis/src/: PaperAnalysis.cpp  PaperAnalysis.h  test.cpp
paper_analysis/paper_analysis/: CMakeLists.txt
paper_analysis/paper_analysis/data/: label_dict.json  label_dict_old.json
paper_analysis/paper_analysis/data/Template/Undergraduate/: Abstract.xml  Coverstyle.xml  Text.xml  test01.xml
paper_analysis/paper_analysis/header/: analysis_XML_file.h  error_code.h  paper_analysis.h  translation_label.h
paper_analysis/paper_analysis/include/: CommandParser.h  DOMElementComparator.h  Document.h  EraseSpaces.h  ErrorCode.h  FindElements.h  NodeToElement.h  Paragraph.h  Run.h  StringExtractor.h  Style.h  Template.h  TransString.h  XMLParserFactory.h  XMLPrinter.h  config.h  config.inc  paper_analysis.h  singal_mutex.h
paper_analysis/paper_analysis/lib/mingw_64/duckx/lib/cmake/duckx/: duckxConfig - Copy.cmake  duckxConfig-relwithdebinfo - Copy.cmake  duckxConfig.cmake
paper_analysis/paper_analysis/lib/mingw_64/googletest-distribution/lib/pkgconfig/: gmock.pc  gmock_main.pc  gtest.pc  gtest_main.pc
paper_analysis/paper_analysis/lib/mingw_64/jsoncpp/lib/cmake/jsoncpp/: jsoncpp-targets-relwithdebinfo.cmake
paper_analysis/paper_analysis/lib/mingw_64/jsoncpp/lib/pkgconfig/: jsoncpp.pc
paper_analysis/paper_analysis/lib/mingw_64/xerces-c/cmake/: XercesCConfigInternal-relwithdebinfo.cmake  XercesCConfigInternal.cmake
paper_analysis/paper_analysis/lib/mingw_64/xerces-c/lib/pkgconfig/: xerces-c.pc
paper_analysis/paper_analysis/lib/mingw_64/xerces-c/share/doc/xerces-c/html/: api-3.html  charter.html  createdoc-3.html  domcount-3.html  faq-build-3.html  faq-distrib-3.html  feedback.html  install-3.html  mailing-lists.html  memparse-3.html  program-dom-3.html  program-others-3.html  program-sax2-3.html  psviwriter-3.html  redirect-3.html  releases.html  releases_archive.html  samples-3.html  sax2count-3.html  sax2print-3.html  schema-3.html
paper_analysis/paper_analysis/lib/mingw_64/xerces-c/share/doc/xerces-c/html/apiDocs-3/: AbstractDOMParser_8hpp.html  AbstractDOMParser_8hpp_source.html  ArrayIndexOutOfBoundsException_8hpp.html  AttributeList_8hpp.html  Attributes_8hpp.html  Base64_8hpp_source.html  BinFileInputStream_8hpp_source.html  BinInputStream_8hpp.html  BinMemInputStream_8hpp.html  DOMAttr_8hpp_source.html  DOMCharacterData_8hpp.html  DOMCharacterData_8hpp_source.html  DOMComment_8hpp.html  DOMDocumentFragment_8hpp_source.html  DOMDocumentRange_8hpp_source.html  DOMDocumentTraversal_8hpp.html  (+420 more)
paper_analysis/paper_analysis/lib/msvc_64/duckx/lib/: duckx.lib
paper_analysis/paper_analysis/lib/msvc_64/duckx/lib/cmake/duckx/: duckxConfig-relwithdebinfo.cmake  duckxConfig.cmake
paper_analysis/paper_analysis/lib/msvc_64/googletest-distribution/lib/: gmock.lib  gmock_main.lib  gtest.lib  gtest_main.lib
paper_analysis/paper_analysis/lib/msvc_64/googletest-distribution/lib/cmake/GTest/: GTestTargets.cmake
paper_analysis/paper_analysis/lib/msvc_64/googletest-distribution/lib/pkgconfig/: gmock.pc  gmock_main.pc  gtest.pc  gtest_main.pc
paper_analysis/paper_analysis/lib/msvc_64/jsoncpp/lib/: jsoncpp.lib  jsoncpp_static.lib
paper_analysis/paper_analysis/lib/msvc_64/jsoncpp/lib/cmake/jsoncpp/: jsoncpp-targets-relwithdebinfo.cmake
paper_analysis/paper_analysis/lib/msvc_64/jsoncpp/lib/pkgconfig/: jsoncpp.pc
paper_analysis/paper_analysis/lib/msvc_64/minidocx/lib/: minidocx.lib
paper_analysis/paper_analysis/lib/msvc_64/xerces-c/cmake/: XercesCConfigInternal-debug.cmake  XercesCConfigInternal.cmake
paper_analysis/paper_analysis/lib/msvc_64/xerces-c/lib/: xerces-c_3D.lib
paper_analysis/paper_analysis/lib/msvc_64/xerces-c/lib/pkgconfig/: xerces-c.pc
paper_analysis/paper_analysis/lib/msvc_64/xerces-c/share/doc/xerces-c/html/: applications.html  bug-report.html  build-3.html  domprint-3.html  download.html  enumval-3.html  faq-contributing-3.html  faq-other-3.html  faq-parse-3.html  faqs-3.html  index.html  migrate-3.html  migrate-archive-3.html  pparse-3.html  program-3.html  program-sax-3.html  releases_plan.html  saxcount-3.html  saxprint-3.html  scmprint-3.html  secadv.html  senumval-3.html  source-repository.html  stdinparse-3.html  xinclude-3.html
paper_analysis/paper_analysis/src/: CommandParser.cpp  Document.cpp  ErrorCode.cpp  Paragraph.cpp  Run.cpp  StringExtractor.cpp  Style.cpp  Template.cpp  analysis_XML_file.cpp  config.inc  error_code.cpp  main.cpp  paper_analysis.cpp  paper_analysis.h  singal_mutex.cpp  test.cpp  translation_label.cpp
paper_analysis/paper_analysis/test/: CMakeLists.txt  my_test.cpp
paper_analysis/paper_analysis/test/CommandParser/: CMakeLists.txt  CommandParser.cpp  CommandParser.h  main.cpp
paper_analysis/paper_analysis/test/Document/: CMakeLists.txt  Document.cpp  Document.h
paper_analysis/paper_analysis/test/ParagraphParserTest/: CMakeLists.txt  main.cpp  paragraph_parser.cpp  paragraph_parser.h
paper_analysis/paper_analysis/test/ParagraphPropertiesTest/: CMakeLists.txt  file.xml  main.cpp  paragraph_properties.cpp  paragraph_properties.h
paper_analysis/paper_analysis/test/Paragraphs/: CMakeLists.txt  Paragraphs.cpp  Paragraphs.h  main.cpp
paper_analysis/paper_analysis/test/RunPropertiesTest/: CMakeLists.txt  main.cpp  run_properties.cpp  run_properties.h
paper_analysis/paper_analysis/test/StringExtractor/: CMakeLists.txt  StringExtractor.cpp  StringExtractor.h  main.cpp
paper_analysis/paper_analysis/test/Temp/: CMakeLists.txt  main.cpp
paper_analysis/paper_analysis/test/Template/: CMakeLists.txt  Template.cpp  Template.h  main.cpp
paper_analysis/paper_analysis/test/XMLParser/: CMakeLists.txt  XMLParser.cpp  XMLParser.h  main.cpp
paper_analysis/paper_analysis/tools/: DOMElementComparator.cpp  EraseSpaces.cpp  FindElements.cpp  NodeToElement.cpp  TransString.cpp  XMLParserFactory.cpp  XMLPrinter.cpp
(+427 files in other folders)
